2008-11-09 Alan McGovern <alan.mcgovern@gmail.com>
	* Banshee.Torrent/Banshee.Torrent/TorrentService.cs:
	* Banshee.Torrent/Banshee.Torrent/TorrentFileDownloadTask.cs: Update to
	  work with the latest monotorrent.dbus

2008-11-09  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageDevice.cs:
	Patch from Florent Thoumie to fix compilation with mono 1.2.5 and 1.2.6
	(BGO #559776).

2008-11-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Torrent/Banshee.Torrent/TorrentService.cs: Add
	explicit private.

	* src/Extensions/Banshee.Torrent/Makefile.am:
	* build/m4/banshee/torrent.m4: Install and uninstall the MonoTorrent
	assemblies.

2008-11-07  Eoin Hennessy <eoin@randomrules.org>

	* build/osx/build.env: Added CXX_FLAGS to build env so that C++ gstreamer
	plugins are compiled with -mmacosx-version-min. Was the cause of various
	crashes on OSX 10.4. 

2008-11-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/StatisticsPage.cs:
	Fix the build, broken by the last commit.

2008-11-07  Alexandre Prokoudine  <alexandre.prokoudine@gmail.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/StatisticsPage.cs:
	Somebody forgot to mark this message for translation, and there are even 
	more in this file.

2008-11-07  Aaron Bockover  <abock@gnome.org>

	Banshee 1.4.0.1 Released

2008-11-07  Aaron Bockover  <abock@gnome.org>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/AndroidDevice.cs:
	Ensure a proper folder depth and path layout

	* src/Dap/Banshee.Dap/Banshee.Dap/MediaGroupSource.cs: Removed some
	overhead do to reworking of the PurchasedMusicActions

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	See if the device provides its own track path and use it if so,
	otherwise create one

	* src/Core/Banshee.Services/Banshee.Collection/ImportManager.cs: Do not